--- a/Code_park02_28_10(Calculadora).ipynb
+++ b/Code_park02_28_10(Calculadora).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN+tt91kDIPgUCb69Dxripk",
+      "authorship_tag": "ABX9TyMFeZ/3Ey62RWmNhXXJjL3a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "def calculadora (x, y):\n",
         "\n",
         "    x = str(input(\"Insira um número: \"))\n",
-        "    xx=x.replace(\",\", \".\") '''para o caso do usuário inserir vírgula ao invés de ponto'''\n",
+        "    xx=x.replace(\",\", \".\") #para o caso do usuário inserir vírgula ao invés de ponto\n",
         "    num1=float(xx)\n",
         "    y = str(input(\"Insira outro número: \"))\n",
         "    yy=y.replace(\",\", \".\")\n",
@@ -66,18 +66,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9hmuZhB_Poso",
-        "outputId": "fab1f0d9-fade-4818-84ca-7dcfa159abb2"
+        "outputId": "e8674683-1895-42d0-fe87-68b3b31d72ba"
       },
-      "execution_count": 41,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Insira um número: 60\n",
-            "Insira outro número: 70\n",
-            "Insira um número correspondente à operação desejada: 1: Adição, 2: Subtração, 3: Multiplicação, 4: Divisão9\n",
-            ">>> ERRO (Operador inexistente)<<<\n"
+            "Insira um número: 50\n",
+            "Insira outro número: 10\n",
+            "Insira um número correspondente à operação desejada: 1: Adição, 2: Subtração, 3: Multiplicação, 4: Divisão4\n",
+            "O seu resultado é: 5.0\n"
           ]
         }
       ]
