--- a/Code_Park01_31_10_(Calculadora_com_menu).ipynb
+++ b/Code_Park01_31_10_(Calculadora_com_menu).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyORWMKFGyW9hbcOT5BWmK1R",
+      "authorship_tag": "ABX9TyMYuXJFfCD2e4no38zHxKVl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": 146,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dewtyFBsEcer",
-        "outputId": "7d08f365-ae0b-4882-948e-fefbad8a1f42"
+        "outputId": "93724526-40bc-43d9-c3b8-df831759b9dc"
       },
       "outputs": [
         {
@@ -45,48 +45,48 @@
             "\n",
             "\n",
             "# Calculadora com Menu #\n",
-            "[1] Adição\n",
+            "[1] Soma\n",
             "[2] Subtração\n",
             "[3] Multiplicação\n",
             "[4] Divisão\n",
-            "[5] Encerrar o programa\n",
+            "[0] Sair\n",
             "\n",
             "Insira um número correspondente à opção desejada: 1\n",
             "\n",
             "Sua opção foi: 1\n",
             "\n",
             "\n",
-            "Insira um número: 10\n",
-            "Insira outro número: 10\n",
+            "Insira um número: 25\n",
+            "Insira outro número: 25\n",
             "\n",
-            "O seu resultado é: >>>20.0<<<\n",
-            "\n",
-            "\n",
-            "# Calculadora com Menu #\n",
-            "[1] Adição\n",
-            "[2] Subtração\n",
-            "[3] Multiplicação\n",
-            "[4] Divisão\n",
-            "[5] Encerrar o programa\n",
-            "\n",
-            "Insira um número correspondente à opção desejada: 50\n",
-            "\n",
-            "Sua opção foi: 50\n",
-            "\n",
-            "\n",
-            ">>> ERRO <<< (Opção Inválida!)\n",
+            "O seu resultado é: >>>50.0<<<\n",
             "\n",
             "\n",
             "# Calculadora com Menu #\n",
-            "[1] Adição\n",
+            "[1] Soma\n",
             "[2] Subtração\n",
             "[3] Multiplicação\n",
             "[4] Divisão\n",
-            "[5] Encerrar o programa\n",
+            "[0] Sair\n",
             "\n",
-            "Insira um número correspondente à opção desejada: 5\n",
+            "Insira um número correspondente à opção desejada: 10\n",
             "\n",
-            "Sua opção foi: 5\n",
+            "Sua opção foi: 10\n",
+            "\n",
+            "\n",
+            ">>> ERRO <<< (Essa opção não existe)\n",
+            "\n",
+            "\n",
+            "# Calculadora com Menu #\n",
+            "[1] Soma\n",
+            "[2] Subtração\n",
+            "[3] Multiplicação\n",
+            "[4] Divisão\n",
+            "[0] Sair\n",
+            "\n",
+            "Insira um número correspondente à opção desejada: 0\n",
+            "\n",
+            "Sua opção foi: 0\n",
             "\n",
             "\n",
             "...Saindo do programa...\n"
@@ -99,11 +99,11 @@
         "     print()\n",
         "     print()\n",
         "     print('# Calculadora com Menu #')\n",
-        "     print('[1] Adição')\n",
+        "     print('[1] Soma')\n",
         "     print('[2] Subtração')\n",
         "     print('[3] Multiplicação')\n",
         "     print('[4] Divisão')\n",
-        "     print('[5] Encerrar o programa')\n",
+        "     print('[0] Sair')\n",
         "     print()\n",
         "     op = int(input(\"Insira um número correspondente à opção desejada: \"))\n",
         "     return op\n",
@@ -137,7 +137,7 @@
         " print()\n",
         " print()\n",
         "\n",
-        " if   op == 5:\n",
+        " if   op == 0:\n",
         "      print (\"...Saindo do programa...\")\n",
         "      break\n",
         " elif op == 1:\n",
@@ -153,7 +153,7 @@
         "      resultado=(calculadora())\n",
         "      print (f'O seu resultado é: >>>{resultado}<<<')\n",
         " else:\n",
-        "     print (\">>> ERRO <<< (Opção Inválida!)\")"
+        "     print (\">>> ERRO <<< (Essa opção não existe)\")"
       ]
     }
   ]
